# TACS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VALIDATION_SUMMARY.md  create_pretrained_weights.cpp  files.txt  inference_99_accuracy.cpp  phase10_console_demo.cpp  phase10_validation.cpp  phase10_web_demo.cpp  phase1_validation.cpp  phase2_validation.cpp  phase3_validation.cpp  phase4_validation.cpp  phase5_validation.cpp  phase6_validation.cpp  phase7_validation.cpp  phase8_validation.cpp  phase9_validation.cpp  phases.txt  progress.py  questions.txt  test.txt  test_final  test_final.cpp  test_json_debug.cpp  test_quick_train.cpp  test_training_stability.sh  train.py  train_99_accuracy.sh  train_tacsnet.cpp  train_tacsnet_dataset.cpp
config/: tacs_default.conf
docs/: DATASET_PREPARATION.md
include/: stb_image_write.h
include/drone/: aerial_inference.h  drone_swarm.h
include/federated/: crypto_utils.h  federated_learning.h  sha256.h  v2x_protocol.h
include/layers/: batch_norm.h  conv2d.h  conv2d_fp16.h  depthwise_conv2d.h  leaky_relu.h  linear.h
include/plugin/: plugin_system.h  plugin_system_simple.h
include/rl/: rl_policy_net.h
include/simulation/: simulation_frontend.h  simulation_frontend_stub.h  text_renderer.h  web_frontend.h
include/tracking/: hungarian_algorithm.h  kalman_filter.h  memory_tracker.h
include/training/: adaptive_optimizer.h  augmentation.h  gradient_converter.h  loss.h  optimizer.h
include/utils/: batch_inference.h  config_manager.h  fp16_ops.h  image_decoder.h  image_processing.h  json_parser.h  matrix_ops.h  metrics.h  nms.h  onnx_exporter.h  onnx_runtime.h  onnx_simd_kernels.h  quantization.h  serialization.h  stb_image_impl.h
python/: generate_3d_car_model.py  generate_synthetic_dataset.py  visualize_dataset.py
scripts/: deploy_edge.sh  generate_synthetic_dataset.py  train_based_on_dataset.py
src/: edge_runtime.cpp  main.cpp
src/drone/: aerial_inference.cpp  drone_swarm.cpp
src/federated/: federated_learning.cpp  sha256.cpp  v2x_protocol.cpp
src/layers/: batch_norm.cpp  conv2d.cpp  depthwise_conv2d.cpp  leaky_relu.cpp
src/plugin/: plugin_system.cpp  plugin_system_simple.cpp
src/rl/: rl_policy_net.cpp
src/simulation/: console_visualization.cpp  simulation_frontend.cpp  simulation_main.cpp  text_renderer.cpp  web_frontend.cpp
src/tracking/: hungarian_algorithm.cpp  kalman_filter.cpp  memory_tracker.cpp
src/training/: adaptive_optimizer.cpp  augmentation.cpp  gradient_converter.cpp  loss.cpp  optimizer.cpp  train_tacsnet.cpp
src/utils/: batch_inference.cpp  image_decoder.cpp  image_processing.cpp  json_parser.cpp  matrix_ops.cpp  metrics.cpp  nms.cpp  onnx_exporter.cpp  onnx_runtime.cpp  onnx_simd_kernels.cpp  quantization.cpp  serialization.cpp
tests/: CMakeLists.txt  test_federated_learning.cpp  test_layers.cpp  test_serialization.cpp  test_tacsnet.cpp  test_tensor.cpp
